--- a/example/src/templates/Something.html
+++ b/example/src/templates/Something.html
@@ -1,5 +1,3 @@
 <div>
-    The follwing is from template:
-    <h1>Hello, {something}</h1>
-    <h1>Foo, {{something}}</h1>
+    <h1><Ex />, {{something}}</h1>
 </div>
